@@ -8,6 +8,9 @@ Features
   represent the function that returns a WSGI application, each now uses
   WebError, each now has roughly the same shape of development.ini style.
 
+- Added class vars ``matchdict`` and ``matched_route`` to
+  ``pyramid.request.Request``.  Each is set to ``None``.
+
 Bug Fixes
 ---------
 
@@ -154,7 +157,7 @@ Backwards Incompatibilities (with BFG 1.3)
 - The deprecated API ``pyramid.testing.registerViewPermission``
   has been removed.
 
-- The deprecated API named ``pyramid.testing.registerRoutesMapper`` 
+- The deprecated API named ``pyramid.testing.registerRoutesMapper``
   has been removed.
 
 - The deprecated API named ``pyramid.request.get_request`` was removed.
